--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -25,7 +25,9 @@
   "appUpdate.overlay.downloadTimeLeft": "{downloadTimeLeft} left",
   "appUpdate.overlay.manualUpdate.button.label": "Follow instructions and manually update",
   "appUpdate.overlay.manualUpdate.button.url": "https://daedaluswallet.io/en/download/",
-  "appUpdate.overlay.manualUpdate.description": "We were unable to launch the update installer automatically. Please manually update Daedalus to its latest version.",
+  "appUpdate.overlay.manualUpdate.description.action": "Please manually update Daedalus to its latest version.",
+  "appUpdate.overlay.manualUpdate.description.error": "We were unable to launch the update installer automatically.",
+  "appUpdate.overlay.manualUpdate.description.errorLinux": "We were unable to launch the update installer automatically.",
   "appUpdate.overlay.postponeInstall.link.label": "Postpone the update",
   "appUpdate.overlay.subtitle": "You are currently running Daedalus version <b>{currentAppVersion}</b>.<br />Daedalus version <b>{availableAppVersion}</b> is now available to download.",
   "appUpdate.overlay.title": "Software update available!",
