--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -25,7 +25,9 @@
   "appUpdate.overlay.downloadTimeLeft": "残り{downloadTimeLeft}",
   "appUpdate.overlay.manualUpdate.button.label": "指示に従い手動で更新してください",
   "appUpdate.overlay.manualUpdate.button.url": "https://daedaluswallet.io/ja/download/",
-  "appUpdate.overlay.manualUpdate.description": "自動で更新インストーラーを起動できませんでした。手動でDaedalusを最新バージョンに更新してください。",
+  "appUpdate.overlay.manualUpdate.description.action": "手動でDaedalusを最新バージョンに更新してください。",
+  "appUpdate.overlay.manualUpdate.description.error": "自動で更新インストーラーを起動できませんでした。",
+  "appUpdate.overlay.manualUpdate.description.errorLinux": "更新をインストールできませんでした。",
   "appUpdate.overlay.postponeInstall.link.label": "後で更新する",
   "appUpdate.overlay.subtitle": "このDaedalusはバージョン<b>{currentAppVersion}</b>です。<br />現在Daedalus <b>{availableAppVersion}</b>がダウンロード可能です",
   "appUpdate.overlay.title": "ソフトウェアが更新できます!",
