--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -462,6 +462,14 @@
   "staking.stakePools.search.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.search.listTitle": "Stake pools ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "Search stake pools",
+  "staking.stakePools.tableHeader.cost": "Cost (ADA)",
+  "staking.stakePools.tableHeader.margin": "Margin",
+  "staking.stakePools.tableHeader.name": "Name",
+  "staking.stakePools.tableHeader.performance": "Performance",
+  "staking.stakePools.tableHeader.rank": "Rank",
+  "staking.stakePools.tableHeader.roi": "Roi",
+  "staking.stakePools.tableHeader.saturation": "Saturation",
+  "staking.stakePools.tableHeader.uptime": "Uptime (days)",
   "staking.stakePools.tooltip.copyIdTooltipLabel": "Copy the stake pool ID",
   "staking.stakePools.tooltip.costPerEpoch": "Cost per epoch:",
   "staking.stakePools.tooltip.delegateButton": "Delegate to this pool",
