--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -462,6 +462,14 @@
   "staking.stakePools.search.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.search.listTitle": "ステークプール ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "ステークプールを検索する",
+  "staking.stakePools.tableHeader.cost": "!!!Cost (ADA)",
+  "staking.stakePools.tableHeader.margin": "!!!Margin",
+  "staking.stakePools.tableHeader.name": "!!!Name",
+  "staking.stakePools.tableHeader.performance": "!!!Performance",
+  "staking.stakePools.tableHeader.rank": "!!!Rank",
+  "staking.stakePools.tableHeader.roi": "!!!Roi",
+  "staking.stakePools.tableHeader.saturation": "!!!Saturation",
+  "staking.stakePools.tableHeader.uptime": "!!!Uptime (days)",
   "staking.stakePools.tooltip.copyIdTooltipLabel": "ステークプールIDをコピーする",
   "staking.stakePools.tooltip.costPerEpoch": "エポックごとのコスト：",
   "staking.stakePools.tooltip.delegateButton": "このプールに委任する",
