DDW-16 Table comparison view for stake pools - updates

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -466,7 +466,10 @@
   "staking.stakePools.tableHeader.margin": "!!!Margin",
   "staking.stakePools.tableHeader.name": "!!!Name",
   "staking.stakePools.tableHeader.performance": "!!!Performance",
+  "staking.stakePools.tableHeader.pledge": "!!!Pledge",
+  "staking.stakePools.tableHeader.producedBlocks": "!!!Produced Blocks",
   "staking.stakePools.tableHeader.rank": "!!!Rank",
+  "staking.stakePools.tableHeader.retiring": "!!!Retiring",
   "staking.stakePools.tableHeader.roi": "!!!Roi",
   "staking.stakePools.tableHeader.saturation": "!!!Saturation",
   "staking.stakePools.tableHeader.uptime": "!!!Uptime (days)",
