DDW-16 Table comparison view for stake pools - fixes

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -473,6 +473,8 @@
   "staking.stakePools.tableHeader.roi": "Roi",
   "staking.stakePools.tableHeader.saturation": "Saturation",
   "staking.stakePools.tableHeader.uptime": "Uptime (days)",
+  "staking.stakePools.tableValue.no": "No",
+  "staking.stakePools.tableValue.yes": "Yes",
   "staking.stakePools.tooltip.copyIdTooltipLabel": "Copy the stake pool ID",
   "staking.stakePools.tooltip.costPerEpoch": "Cost per epoch:",
   "staking.stakePools.tooltip.delegateButton": "Delegate to this pool",
