--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -897,7 +897,7 @@
   "wallet.transferFunds.dialog1.sourceWallet": "From Byron legacy wallet",
   "wallet.transferFunds.dialog1.targetWallet": "To Shelley-compatible wallet",
   "wallet.transferFunds.dialog1.title": "Transfer funds",
-  "wallet.transferFunds.dialog2.label.amount": "Amount",
+  "wallet.transferFunds.dialog2.label.sourceWalletAmount": "{sourceWalletName} amount",
   "wallet.transferFunds.dialog2.label.buttonLabel": "Transfer funds",
   "wallet.transferFunds.dialog2.label.description": "Confirm transfer from {sourceWalletName} wallet to {targetWalletName} wallet.",
   "wallet.transferFunds.dialog2.label.fees": "Fees",
