--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -473,12 +473,11 @@
   "staking.stakePools.tableHeader.pledge": "!!!Pledge",
   "staking.stakePools.tableHeader.producedBlocks": "!!!Produced Blocks",
   "staking.stakePools.tableHeader.rank": "!!!Rank",
-  "staking.stakePools.tableHeader.retiring": "!!!Retiring",
+  "staking.stakePools.tableHeader.retiring": "!!!Retiring in",
   "staking.stakePools.tableHeader.roi": "!!!Roi",
   "staking.stakePools.tableHeader.saturation": "!!!Saturation",
   "staking.stakePools.tableHeader.uptime": "!!!Uptime (days)",
   "staking.stakePools.tableValue.no": "!!!No",
-  "staking.stakePools.tableValue.yes": "!!!Yes",
   "staking.stakePools.tooltip.copyIdTooltipLabel": "ステークプールIDをコピーする",
   "staking.stakePools.tooltip.costPerEpoch": "エポックごとのコスト：",
   "staking.stakePools.tooltip.delegateButton": "このプールに委任する",
