--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -902,6 +902,7 @@
   "wallet.transferFunds.dialog2.label.description": "Confirm transfer from {sourceWalletName} wallet to {targetWalletName} wallet.",
   "wallet.transferFunds.dialog2.label.fees": "Fees",
   "wallet.transferFunds.dialog2.label.leftovers": "Leftovers",
+  "wallet.transferFunds.dialog2.tooltip.leftovers": "<b>Leftovers</b> are some amount left in the source wallet some rare cases.",
   "wallet.transferFunds.dialog2.label.total": "Total",
   "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Spending password",
   "wallet.transferFunds.dialog2.passphraseLabel": "Spending password",
