[DDW-337] Learn more link

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -897,13 +897,15 @@
   "wallet.transferFunds.dialog1.sourceWallet": "From Byron legacy wallet",
   "wallet.transferFunds.dialog1.targetWallet": "To Shelley-compatible wallet",
   "wallet.transferFunds.dialog1.title": "Transfer funds",
-  "wallet.transferFunds.dialog2.label.sourceWalletAmount": "{sourceWalletName} amount",
+  "wallet.transferFunds.dialog2.sourceWalletAmount.label": "{sourceWalletName} amount",
   "wallet.transferFunds.dialog2.label.buttonLabel": "Transfer funds",
-  "wallet.transferFunds.dialog2.label.description": "Confirm transfer from {sourceWalletName} wallet to {targetWalletName} wallet.",
-  "wallet.transferFunds.dialog2.label.fees": "Fees",
-  "wallet.transferFunds.dialog2.label.leftovers": "Leftovers",
+  "wallet.transferFunds.dialog2.description.label": "Confirm transfer from {sourceWalletName} wallet to {targetWalletName} wallet.",
+  "wallet.transferFunds.dialog2.fees.label": "Fees",
+  "wallet.transferFunds.dialog2.leftovers.label": "Leftovers",
+  "wallet.transferFunds.dialog2.leftovers.LearnMore.label": "Learn more.",
+  "wallet.transferFunds.dialog2.leftovers.LearnMore.url": "!!!https://iohk.zendesk.com/hc/en-us/articles/",
   "wallet.transferFunds.dialog2.tooltip.leftovers": "<b>Leftovers</b> are some amount left in the source wallet some rare cases.",
-  "wallet.transferFunds.dialog2.label.total": "Total",
+  "wallet.transferFunds.dialog2.total.label": "Total",
   "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Spending password",
   "wallet.transferFunds.dialog2.passphraseLabel": "Spending password",
   "wallet.transferFunds.dialog2.title": "Transfer funds"
