--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -4673,6 +4673,34 @@
           "column": 24,
           "line": 148
         }
+      },
+      {
+        "defaultMessage": "!!!Savings",
+        "description": "Syncing wallet savings label on the delegation setup \"choose wallet\" step dialog.",
+        "end": {
+          "column": 3,
+          "line": 161
+        },
+        "file": "source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.js",
+        "id": "staking.delegationSetup.chooseWallet.step.dialog.syncingSavingsWallet",
+        "start": {
+          "column": 24,
+          "line": 155
+        }
+      },
+      {
+        "defaultMessage": "!!!in sync",
+        "description": "Syncing wallet label on the delegation setup \"choose wallet\" step dialog.",
+        "end": {
+          "column": 3,
+          "line": 168
+        },
+        "file": "source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.js",
+        "id": "staking.delegationSetup.chooseWallet.step.dialog.syncingWallet",
+        "start": {
+          "column": 17,
+          "line": 162
+        }
       }
     ],
     "path": "source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.json"
