--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -345,8 +345,7 @@
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputLabel": "ウォレット",
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputPlaceholder": "ウォレットを選択してください",
   "staking.delegationSetup.chooseWallet.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
-  "staking.delegationSetup.chooseWallet.step.dialog.syncingSavingsWallet": "!!!Savings",
-  "staking.delegationSetup.chooseWallet.step.dialog.syncingWallet": "!!!in sync",
+  "staking.delegationSetup.chooseWallet.step.dialog.syncingWallet": "同期中",
   "staking.delegationSetup.chooseWallet.step.dialog.title": "ウォレットを委任する",
   "staking.delegationSetup.confirmation.step.dialog.calculatingFees": "手数料を計算しています",
   "staking.delegationSetup.confirmation.step.dialog.cancelButtonLabel": "キャンセル",
