--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -9894,7 +9894,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Learn more.",
+        "defaultMessage": "!!!Learn more",
         "description": "Label Leftovers in the transfer funds form",
         "end": {
           "column": 3,
