--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -904,7 +904,7 @@
   "wallet.transferFunds.dialog2.description.label": "Confirm transfer from {sourceWalletName} wallet to {targetWalletName} wallet.",
   "wallet.transferFunds.dialog2.fees.label": "Fees",
   "wallet.transferFunds.dialog2.label.buttonLabel": "Transfer funds",
-  "wallet.transferFunds.dialog2.leftovers.LearnMore.label": "Learn more.",
+  "wallet.transferFunds.dialog2.leftovers.LearnMore.label": "Learn more",
   "wallet.transferFunds.dialog2.leftovers.LearnMore.url": "https://iohk.zendesk.com/hc/en-us/articles/900002932323",
   "wallet.transferFunds.dialog2.leftovers.label": "Leftovers",
   "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Spending password",
